updated as per review